Sat Jan  3 09:01:43 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* NEWS: added compatibility entry of r49101.

Fri Jan  2 21:06:59 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/http.rb (Net::HTTP#send_request): there is no response body
	  with HEAD request. Patch by @rodrigosaito [fix GH-520]

Fri Jan  2 21:04:36 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/net/http/test_http.rb (_test_send_request__HEAD): Added
	  failing test for send_request with HEAD method.

Fri Jan  2 18:41:20 2015  Tanaka Akira  <akr@fsij.org>

	* eval.c (ruby_init): Print ruby_setup() error only in debug mode.
	  Unsupressable error message is not a good idea.
	  Note that the message is printed sometimes with following
	  code (highly timing dependent, though):
	  pid = spawn("ruby -e ''"); Process.kill(:TERM, pid)

Fri Jan  2 16:18:44 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_module.rb: Refactor invalid testcase.
	  [fix GH-472][ruby-core:59035][Bug #9240]

Fri Jan  2 15:53:00 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/webrick/utils.rb: removed unused argument variable.
	  [fix GH-356] Patch by @vipulnsward
	* lib/webrick/server.rb: ditto.
	* lib/webrick/ssl.rb: ditto.
	* test/webrick/test_utils.rb: added test for WEBrick::Utils#create_listeners.

Fri Jan  2 15:35:53 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/securerandom.rb: improve syntax and grammar of documentation.
	  [fix GH-796][ci skip] Patch by @Erol

Fri Jan  2 15:10:01 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/openssl/test_ssl_session.rb (OpenSSL#test_ctx_client_session_cb):
	  fix test failure with OpenSSL disabled SSLv3 protocol.
	  [ruby-core:63772] [Bug #10046]

Fri Jan  2 09:08:31 2015  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS::Label::Str#==): Check class equality.
	  (Resolv::DNS::Name#initialize): Normalize labels as
	  Resolv::DNS::Label::Str objects.
